<resources>
    <string name="app_name">parameter_Act3</string>
    <string name="tEmail">Email: </string>
    <string name="tPassword">Password: </string>
    <string name="bsignin">Sign In</string>
    <string name="var1">Ini Pesan</string>
    <string name="tLogin">Login</string>
    <string name="tData">Data Anda</string>
    <string name="txEmail">Ini Hasil Email</string>
    <string name="txPassword">Ini Hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="lDaftar">Form Daftar</string>
    <string name="eNama">Masukkan Nama</string>
    <string name="eEmail">Masukkan Email</string>
    <string name="ePass">Masukkan Password</string>
    <string name="eRepass">Ulangi Masukkan Password</string>
    <string name="eAlamat">Masukkan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">EditData</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">No Telepon</string>
</resources>